--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eval inté-web</title>
 </head>
+
 <body>
 
 <link rel="stylesheet" href="style.css">
 
+<img src="banner2.jpg" alt="bannière">
 <header>
     <h1><a href="#">Industrious</a></h1> 
     <nav>
@@ -20,13 +22,69 @@
     </nav>
 </header>
 
-<h1>Industrious</h1>
+<h1>Industrious</h1><br>
 <a>A responsive business oriented template with a videobackground designed by TEMPLATED and released under the Creative Commons License.</a>
     
 
-<article>
-<h1>SEM TURPIS AMET SEMPER</h1>
+<article id ="intro">
+    <br>
+    <h1>SEM TURPIS AMET SEMPER</h1>
+    <br>
+    <p>In arcu adipiscing accumsan arci ac. Felis id enim aliquet. Accumsan ac integer lobortis commodo ornare aliquet accumsan erat tempus amet porttitor.</p>
 </article>
+
+<div>
+    <article> 
+        <i class ="" ></i>
+        <h1>FEUGIAT CONSEQUAT</h1><br>
+        <p>Nunc lacinia ante nunc ac lobortis impusm. Interdum adipiscing gravida odio porttitor sem non mi interger faucibus.</p>
+    </article>
+
+        <article> 
+        <i class ="" ></i>
+        <h1>ANTE SEM INTEGE</h1><br>
+        <p>Nunc lacinia ante nunc ac lobortis impusm. Interdum adipiscing gravida odio porttitor sem non mi interger faucibus.</p>
+    </article>
+
+        <article> 
+        <i class ="" ></i>
+        <h1>IPSUM CONSEQUAT</h1><br>
+        <p>Nunc lacinia ante nunc ac lobortis impusm. Interdum adipiscing gravida odio porttitor sem non mi interger faucibus.</p>
+    </article>
+
+        <article> 
+        <i class ="" ></i>
+        <h1>INTERDUM GRAVIDA</h1><br>
+        <p>Nunc lacinia ante nunc ac lobortis impusm. Interdum adipiscing gravida odio porttitor sem non mi interger faucibus.</p>
+    </article>
+
+        <article> 
+        <i class ="" ></i>
+        <h1>FUCIBUS CONSEQUAT</h1><br>
+        <p>Nunc lacinia ante nunc ac lobortis impusm. Interdum adipiscing gravida odio porttitor sem non mi interger faucibus.</p>
+    </article>
+
+        <article> 
+        <i class ="" ></i>
+        <h1>ACCUMSAN VIVERRA</h1><br>
+        <p>Nunc lacinia ante nunc ac lobortis impusm. Interdum adipiscing gravida odio porttitor sem non mi interger faucibus.</p>
+    </article>
+</div>
+
+<article>
+    <h1>CURABITUR ULLAMCORPER ULTRICIES</h1><br>
+    <p>Nunc lacinia ante nunc ac lobortis impusm. Interdum adipiscing gravida odio porttitor sem non mi interger faucibus.</p>
+    <img src="cta01.jpg" alt="bannière de cta">
+</article>
+
+<footer> 
+    <div>
+        <article>
+            <h1>ACCUMSAN MONTES VIVERRA</h1>
+            <p>Nunc lacinia ante nunc ac lobortis impusm. Interdum adipiscing gravida odio porttitor sem non mi interger faucibus.</p>
+        </article>
+    </div>
+</footer>
 
 </body>
 </html>
