--- a/index.html
+++ b/index.html
@@ -83,7 +83,27 @@
             <h1>ACCUMSAN MONTES VIVERRA</h1>
             <p>Nunc lacinia ante nunc ac lobortis impusm. Interdum adipiscing gravida odio porttitor sem non mi interger faucibus.</p>
         </article>
+
+        <article>
+        </article>
     </div>
+
+    <article>
+        <h1>SEM TURPIS AMET SEMPER</h1>
+        <ul>
+            <li>
+                <a href="#">dotor pulvinar sed etiam</a><br>
+                <a href="#">Etiam vel lorem sed amet</a><br>
+                <a href="#">elis enim feugiat viverra</a><br>
+                <a href="#">dotor pulvinar magna etiam</a><br>
+            </li>
+        </ul>
+    </article>
+
+    <article id="social">
+        <h1></h1>
+
+    </article>
 </footer>
 
 </body>
