--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <link rel="stylesheet" href="style.css">
 
-<img src="banner2.jpg" alt="bannière">
+<img src="banner2.jpg" alt="banniere">
 <header>
     <h1><a href="#">Industrious</a></h1> 
     <nav>
@@ -101,9 +101,18 @@
     </article>
 
     <article id="social">
-        <h1></h1>
+        <h1>MAGNA SED IPSUM</h1>
+        <ul>
+            <li>
+                <a href="#"><i class=""></i>Twitter</a><br>
+                <a href="#"><i class=""></i>facebook</a><br>
+                <a href="#"><i class=""></i>Instagram</a><br>
+                <a href="#"><i class=""></i>Github</a><br>
 
+            </li>
+        </ul>
     </article>
+    <p>Untiled, Photos Unsplash,video coverr.</p>
 </footer>
 
 </body>
